# r2pay

./: README.md  lief_patch.py  push.sh  root-bypass.js
assets/: data_dump.raw  data_static.raw  fault_console.txt  fault_trace_console.txt  instrumentation_timing.json  key_recovery.txt  mem_trace.json  timing.txt
assets/wb-traces/: injection-1a8549.trace  injection-1a8978.trace  injection-1a8fdf.trace  injection-1a90ce.trace  injection-1a91b2.trace  injection-1a930d.trace  injection-1a95bd.trace
scripts/: aes_test.py  show_memory_accesses.py  wb_key_recovery.py
shim-whitebox/: CMakeLists.txt
shim-whitebox/cmake/: config-android-aarch64.sh
shim-whitebox/src/: data.hpp  json.hpp  main.cpp
